--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ music/
 playlists/
 cookies.json
 www.youtube.com_cookies.txt
+private-tools/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
