Refactor UI components: update button dimensions, improve text box rendering, and enhance style management; increment version to 0.7.4

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 music/
 playlists/
 cookies.json
-www.youtube.com_cookies.txt
+cookies.txt
 private-tools/
 
 # Byte-compiled / optimized / DLL files
